[gd_scene load_steps=7 format=2]

[ext_resource path="res://magnet/Magnet.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://magnet/magnet_container.gd" type="Script" id=4]
[ext_resource path="res://ui/magnet_color_picker_button.gd" type="Script" id=5]
[ext_resource path="res://n_body_simulation.gd" type="Script" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="MagnetContainer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 4 )
magnet_scene = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Output" type="TextureRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
mouse_filter = 2

[node name="ResolutionSettings" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 50.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings"]
margin_right = 1008.0
margin_bottom = 21.0
text = "Render Settings"

[node name="SettingsContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings"]
margin_top = 25.0
margin_right = 1008.0
margin_bottom = 50.0
mouse_filter = 2
custom_constants/separation = 8

[node name="RenderButton" type="Button" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings/SettingsContainer"]
margin_right = 76.0
margin_bottom = 25.0
focus_mode = 0
enabled_focus_mode = 0
text = "Render"

[node name="SaveImageButton" type="Button" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings/SettingsContainer"]
margin_left = 84.0
margin_right = 200.0
margin_bottom = 25.0
focus_mode = 0
enabled_focus_mode = 0
text = "Save Image"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings/SettingsContainer"]
margin_left = 208.0
margin_right = 450.0
margin_bottom = 25.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings/SettingsContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 23.0
text = "Resolution"

[node name="SpinBox" type="SpinBox" parent="UI/MarginContainer/VBoxContainer/ResolutionSettings/SettingsContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 242.0
margin_bottom = 25.0
hint_tooltip = "The ratio of render pixel size to screen pixel size. "
min_value = 1.0
max_value = 8.0
value = 1.0

[node name="SimulationSettings" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 534.0
margin_right = 1008.0
margin_bottom = 584.0
mouse_filter = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/SimulationSettings"]
margin_right = 1008.0
margin_bottom = 21.0
text = "Simulation Settings"

[node name="SettingsContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer/SimulationSettings"]
margin_top = 25.0
margin_right = 1008.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/separation = 8

[node name="AddMagnetButton" type="Button" parent="UI/MarginContainer/VBoxContainer/SimulationSettings/SettingsContainer"]
unique_name_in_owner = true
margin_right = 116.0
margin_bottom = 25.0
hint_tooltip = "Create a pole that attracts the particle."
focus_mode = 0
text = "Add Magnet"

[node name="MagnetStatus" type="PanelContainer" parent="UI/MarginContainer"]
margin_left = 760.0
margin_top = 464.0
margin_right = 1016.0
margin_bottom = 592.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="MagnetStatusContainer" type="VBoxContainer" parent="UI/MarginContainer/MagnetStatus"]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 4.0
margin_right = 248.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
margin_right = 240.0
margin_bottom = 21.0
text = "Magnet Parameters"

[node name="NoneSelectedWarning" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
visible = false
margin_top = 25.0
margin_right = 240.0
margin_bottom = 46.0
text = "(none selected)"

[node name="ColorContainer" type="HBoxContainer" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
margin_top = 25.0
margin_right = 240.0
margin_bottom = 48.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/ColorContainer"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 22.0
text = "Color"

[node name="MagnetColorPickerButton" type="ColorPickerButton" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/ColorContainer"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 240.0
margin_bottom = 23.0
focus_mode = 0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 1 )
script = ExtResource( 5 )

[node name="MassContainer" type="HBoxContainer" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
margin_top = 52.0
margin_right = 240.0
margin_bottom = 73.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/MassContainer"]
margin_right = 50.0
margin_bottom = 21.0
rect_min_size = Vector2( 50, 0 )
text = "Mass"

[node name="MassSpinBox" type="SpinBox" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/MassContainer"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 240.0
margin_bottom = 21.0
size_flags_horizontal = 11
size_flags_vertical = 3
min_value = 0.05
max_value = 1000.0
step = 0.05
value = 1.0

[node name="NBodySimulation" type="Node" parent="."]
script = ExtResource( 6 )
