[gd_scene load_steps=7 format=3 uid="uid://pu5wbxrkc2pt"]

[ext_resource type="Script" path="res://main/main.gd" id="1_pdibx"]
[ext_resource type="Script" path="res://main/magnet_container.gd" id="2_d2q1m"]
[ext_resource type="PackedScene" uid="uid://dsbfcv7gejeom" path="res://main/magnet/Magnet.tscn" id="3_1nb61"]
[ext_resource type="Script" path="res://main/iron_container.gd" id="4_txm1c"]
[ext_resource type="PackedScene" path="res://main/iron/Iron.tscn" id="5_v870u"]
[ext_resource type="Theme" uid="uid://cg8kvj44rp6jy" path="res://main/ui/main_theme.tres" id="6_uhv6s"]

[node name="Main" type="Node"]
script = ExtResource("1_pdibx")

[node name="Output" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
centered = false

[node name="MagnetContainer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_d2q1m")
magnet_scene = ExtResource("3_1nb61")

[node name="IronContainer" type="Node2D" parent="."]
script = ExtResource("4_txm1c")
iron_scene = ExtResource("5_v870u")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6_uhv6s")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TopContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SettingsContainer" type="HBoxContainer" parent="UI/MarginContainer/TopContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="RenderButton" type="Button" parent="UI/MarginContainer/TopContainer/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create an image representing the final positions of an iron initially placed at each pixel."
focus_mode = 0
text = "Render"

[node name="SaveImageButton" type="Button" parent="UI/MarginContainer/TopContainer/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Save the rendered image as a png in the directory of the executable program."
focus_mode = 0
text = "Save Image"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/TopContainer/SettingsContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/MarginContainer/TopContainer/SettingsContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Resolution"
vertical_alignment = 1

[node name="ResolutionSpinBox" type="SpinBox" parent="UI/MarginContainer/TopContainer/SettingsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "The ratio of render pixel size to screen pixel size. "
min_value = 1.0
max_value = 8.0
value = 4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/MarginContainer/TopContainer/SettingsContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/MarginContainer/TopContainer/SettingsContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "Iterations"
vertical_alignment = 1

[node name="IterationSpinBox" type="SpinBox" parent="UI/MarginContainer/TopContainer/SettingsContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "The maximum physics steps per pixel."
min_value = 1.0
max_value = 8192.0
value = 256.0

[node name="Label" type="Label" parent="UI/MarginContainer/TopContainer"]
layout_mode = 2
text = "(left-click to add a magnet, right-click to simulate an iron at that spot)"

[node name="MagnetStatus" type="PanelContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MagnetStatusContainer" type="VBoxContainer" parent="UI/MarginContainer/MagnetStatus"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
layout_mode = 2
text = "Magnet Parameters"

[node name="NoneSelectedWarning" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
visible = false
layout_mode = 2
text = "(none selected)"

[node name="ColorContainer" type="HBoxContainer" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/ColorContainer"]
custom_minimum_size = Vector2(77, 0)
layout_mode = 2
text = "Color"

[node name="MagnetColorPickerButton" type="ColorPickerButton" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/ColorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
color = Color(1, 1, 1, 1)

[node name="MassContainer" type="HBoxContainer" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/MassContainer"]
custom_minimum_size = Vector2(77, 0)
layout_mode = 2
text = "Strength"

[node name="MassSpinBox" type="SpinBox" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer/MassContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 3
tooltip_text = "The strength of this magnet's magnetic field. A negative strength repels irons."
min_value = -1000.0
max_value = 1000.0
step = 0.01
value = 1.0
custom_arrow_step = 1.0
select_all_on_focus = true

[node name="MagnetDeleteButton" type="Button" parent="UI/MarginContainer/MagnetStatus/MagnetStatusContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "Delete"
